--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,13 @@
 {
-  "presets": ["babel-preset-expo"],
-  "env": {
-    "development": {
-      "plugins": ["transform-react-jsx-source"]
-    }
-  }
+    "presets": ["babel-preset-expo"],
+    "env": {
+        "development": {
+            "plugins": ["transform-react-jsx-source"]
+        }
+    },
+    "presets": [
+        "es2015",
+        "stage-0",
+        "react"
+    ],
 }
