--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "devDependencies": {
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "jest-expo": "~19.0.0",
     "react-native-scripts": "1.1.0",
     "react-test-renderer": "16.0.0-alpha.12",
@@ -25,10 +29,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^19.0.0",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-native": "^0.46.1",
-    "react-native-web": "0.0.119"
+    "expo": "^15.0.0",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-native": "^0.42.0",
+    "react-native-web": "0.0.119",
+    "react-router-native": "^4.1.1"
   }
 }
