--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,8 @@
 {
-    "presets": ["babel-preset-expo"],
     "env": {
         "development": {
             "plugins": ["transform-react-jsx-source"]
         }
     },
-    "presets": [
-        "es2015",
-        "stage-0",
-        "react"
-    ],
+    "presets": ["react-native-stage-0"]
 }
