--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-import-resolver-babel-module": "^3.0.0",
+    "eslint-import-resolver-webpack": "^0.8.0",
+    "eslint-loader": "1.6.0",
+    "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-react": "6.9.0",
     "jest-expo": "~19.0.0",
-    "react-native-scripts": "1.1.0",
-    "react-test-renderer": "16.0.0-alpha.12",
+    "react-native-scripts": "0.0.26",
+    "react-test-renderer": "~15.4.1",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1",
     "webpack-hot-middleware": "^2.18.2"
@@ -18,8 +28,8 @@
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "start": "react-native-scripts start",
-    "dev-web": "./node_modules/.bin/webpack-dev-server -d --config web/webpack.config.js --inline --hot --colors --watch",
-    "build-web": "./node_modules/.bin/webpack -p --config web/webpack.config.js",
+    "web:dev": "./node_modules/.bin/webpack-dev-server -d --config web/webpack.config.js --inline --hot --colors --watch",
+    "web:build": "./node_modules/.bin/webpack -p --config web/webpack.config.js",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
@@ -29,11 +39,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "expo": "^15.0.0",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "react-native": "^0.42.0",
+    "history": "^4.6.3",
+    "react": "~15.4.1",
+    "react-dom": "~15.4.1",
+    "react-native": "~0.42.3",
     "react-native-web": "0.0.119",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "react-router-native": "^4.1.1"
   }
 }
